--- a/app/employee_management_ui/webapp/view/ExportControl.view.xml
+++ b/app/employee_management_ui/webapp/view/ExportControl.view.xml
@@ -15,6 +15,15 @@
                         text="LITNA Check and Export Controls"
                     />
                 </f:heading>
+                <f:breadcrumbs>
+                    <Breadcrumbs>
+                        <Link press="onPress" text="Home"/>
+                        <Link press="onPress" text="My Tasks" />
+                        <currentLocation>
+                            <Link press="onPress" text="Export Controls" />
+                        </currentLocation>
+                    </Breadcrumbs>
+                </f:breadcrumbs>
                 <f:expandedContent>
                     <Label text="Name of Need" />
                 </f:expandedContent>
