--- a/app/employee_management_ui/webapp/view/Need.view.xml
+++ b/app/employee_management_ui/webapp/view/Need.view.xml
@@ -36,6 +36,15 @@
 							<m:Label text="610020203"/>
 						</m:VBox>
 				</actions>
+				<breadcrumbs>
+                    <m:Breadcrumbs>
+                        <m:Link press="onPress" text="Home"/>
+                        <m:Link press="onPress" text="Needs" />
+                        <m:currentLocation>
+                            <m:Link press="onPress" text="ITM Planning and Integration Manager" />
+                        </m:currentLocation>
+                    </m:Breadcrumbs>
+                </breadcrumbs>
 			</ObjectPageDynamicHeaderTitle>
 		</headerTitle>
 
