--- a/app/employee_management_ui/webapp/view/Notification.view.xml
+++ b/app/employee_management_ui/webapp/view/Notification.view.xml
@@ -14,6 +14,15 @@
                         text="Notify Employee: Heather (Heather) Renee Wilcott"
                     />
                 </f:heading>
+                <f:breadcrumbs>
+                    <Breadcrumbs>
+                        <Link press="onPress" text="Home"/>
+                        <Link press="onPress" text="My Tasks" />
+                        <currentLocation>
+                            <Link press="onPress" text="Notify Employee" />
+                        </currentLocation>
+                    </Breadcrumbs>
+                </f:breadcrumbs>
                 <f:expandedContent>
                     <Label text="This is a subheading" />
                 </f:expandedContent>
