--- a/app/employee_management_ui/webapp/view/PositionValidation.view.xml
+++ b/app/employee_management_ui/webapp/view/PositionValidation.view.xml
@@ -14,6 +14,15 @@
                 <f:heading>
                     <Title text="Position Validation"/>
                 </f:heading>
+                <f:breadcrumbs>
+                    <Breadcrumbs>
+                        <Link press="onPress" text="Home"/>
+                        <Link press="onPress" text="My Tasks" />
+                        <currentLocation>
+                            <Link press="onPress" text="Position Validation" />
+                        </currentLocation>
+                    </Breadcrumbs>
+                </f:breadcrumbs>
                 <f:expandedContent>
                     <Label text=""/>
                 </f:expandedContent>
