--- a/app/employee_management_ui/webapp/view/Tasks.view.xml
+++ b/app/employee_management_ui/webapp/view/Tasks.view.xml
@@ -13,6 +13,12 @@
     <l:VerticalLayout
 			class="sapUiContentPadding"
 			width="100%">
+			<Breadcrumbs>
+				<Link press="onPress" text="Home"/>
+				<currentLocation>
+					<Link press="onPress" text="My Tasks" />
+				</currentLocation>
+			</Breadcrumbs>
 			<f:GridList
 				id="gridList" sticky="HeaderToolbar">
 				<f:headerToolbar>
