--- a/app/employee_management_ui/webapp/view/Main.view.xml
+++ b/app/employee_management_ui/webapp/view/Main.view.xml
@@ -31,6 +31,7 @@
 						<Button type="Transparent" icon="sap-icon://filter"/>
 						<Button type="Transparent" icon="sap-icon://sort"/>
 						<Button type="Emphasized" icon="sap-icon://collaborate" text="Extended Team's Need" tooltip="Extended Team's Need" press="onExtendedNeedPress" />
+						<Button type="Emphasized" icon="sap-icon://meeting-room" text="View Councils" tooltip="View your councils" press="onViewPress" />
 					</Toolbar>
 				</f:headerToolbar>
 				<f:customLayout>
@@ -38,7 +39,7 @@
 				</f:customLayout>
 
 				<f:GridListItem type="Active">
-					<f:Card>
+					<f:Card >
 						<f:header>
 							<card:Header
 								title="{title}"
