--- a/app/employee_management_ui/webapp/view/Main.view.xml
+++ b/app/employee_management_ui/webapp/view/Main.view.xml
@@ -13,9 +13,9 @@
 			class="sapUiContentPadding"
 			width="100%">
 			<Breadcrumbs>
-				<Link press="onPress" text="Home"/>
+				<Link press="onPressHome" text="Home"/>
 				<currentLocation>
-					<Link press="onPress" text="Needs" />
+					<Link text="Needs" />
 				</currentLocation>
 			</Breadcrumbs>
 			<f:GridList
