Rectified Add Candidate

--- a/app/employee_management_ui/webapp/view/Need.view.xml
+++ b/app/employee_management_ui/webapp/view/Need.view.xml
@@ -116,7 +116,7 @@
 				<subSections>
 					<ObjectPageSubSection title="Candidate" showTitle="false">
 						<blocks>
-							<info:Candidates add="onPress" />
+							<info:Candidates add="onAddCandidate" />
 						</blocks>
 					</ObjectPageSubSection>
 				</subSections>
