--- a/app/employee_management_ui/webapp/view/Main.view.xml
+++ b/app/employee_management_ui/webapp/view/Main.view.xml
@@ -1,27 +1,72 @@
-<mvc:View controllerName="sap.deloitte.employeemanagement.employeemanagementui.controller.Main"
+<mvc:View
+    controllerName="sap.deloitte.employeemanagement.employeemanagementui.controller.Main"
     xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc"
-	xmlns:f="sap.f"
-	xmlns:card="sap.f.cards"
-	xmlns:core="sap.ui.core"
-	displayBlock="true"
-	xmlns:l="sap.ui.layout"
-	xmlns:grid="sap.ui.layout.cssgrid"
-	height="100%">
-	<Page showHeader="false" >
-		<l:VerticalLayout
-			class="sapUiContentPadding"
-			width="100%">
-			<Breadcrumbs>
-				<Link press="onPressHome" text="Home"/>
-				<currentLocation>
-					<Link text="Needs" />
-				</currentLocation>
-			</Breadcrumbs>
-			<f:GridList
-				id="gridList"
-				itemPress="_handleItemPress"
-				items="{
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:card="sap.f.cards"
+    xmlns:core="sap.ui.core"
+    displayBlock="true"
+    xmlns:l="sap.ui.layout"
+    xmlns:grid="sap.ui.layout.cssgrid"
+    height="100%"
+>
+    <Page showHeader="false">
+        <l:VerticalLayout
+            class="sapUiContentPadding"
+            width="100%"
+        >
+            <Breadcrumbs>
+                <Link
+                    press="onPressHome"
+                    text="Home"
+                />
+                <currentLocation>
+                    <Link text="Needs" />
+                </currentLocation>
+            </Breadcrumbs>
+            <Input
+                class="sapUiTinyMarginBottom"
+                id="councilInput"
+                textFormatMode="KeyValue"
+                submit="handleInputSubmit"
+                placeholder="Enter Council"
+                showSuggestion="true"
+                autocomplete="false"
+                showValueHelp="true"
+                change="handleInputChange"
+                valueHelpRequest="handleInputValueHelpOpen"
+                suggestionItems="{/Councils}"
+                suggestionItemSelected="handleInputSuggestionItemSelected"
+				width="30%"
+            >
+                <suggestionItems>
+                    <core:ListItem
+                        key="{CouncilID}"
+                        text="{CouncilName}"
+                        additionalText="{CouncilID}"
+                    />
+                </suggestionItems>
+            </Input>
+            <NavContainer
+                id="navCon"
+                width="98%"
+                height="150em"
+            >
+			<Page id="p1" showHeader="false">
+				<IllustratedMessage
+					illustrationType="sapIllus-SearchFolder"
+					title="Select Council"
+					description="Select the council to view the needs."
+				/>
+			</Page>
+			<Page
+				id="p2"
+				showHeader="false">
+				
+                <f:GridList
+                    id="gridList"
+                    itemPress="_handleItemPress"
+                    items="{
 					path: '/items',
 					sorter: {
 						path: 'status',
@@ -29,50 +74,79 @@
 						group: true
 					}
 				}">
-				<f:headerToolbar>
-					<Toolbar>
-						<Text text="Needs({/items/length})" />
-						<ToolbarSpacer ></ToolbarSpacer>
-						<SearchField width="50%" placeholder="Search Need(s)"/>
-						<Button type="Transparent" icon="sap-icon://filter"/>
-						<Button type="Transparent" icon="sap-icon://sort"/>
-						<Button type="Emphasized" icon="sap-icon://collaborate" text="Extended Team's Need" tooltip="Extended Team's Need" press="onExtendedNeedPress" />
-						<Button type="Emphasized" icon="sap-icon://meeting-room" text="View Councils" tooltip="View your councils" press="onViewPress" />
-					</Toolbar>
-				</f:headerToolbar>
-				<f:customLayout>
-					<grid:GridBoxLayout boxMinWidth="17rem"/>
-				</f:customLayout>
+                    <f:headerToolbar>
+                        <Toolbar>
+                            <Text text="Needs({/items/length})" />
+                            <ToolbarSpacer />
+                            <SearchField
+                                width="50%"
+                                placeholder="Search Need(s)"
+                            />
+                            <Button
+                                type="Transparent"
+                                icon="sap-icon://filter"
+                            />
+                            <Button
+                                type="Transparent"
+                                icon="sap-icon://sort"
+                            />
+                            <Button
+                                type="Emphasized"
+                                icon="sap-icon://collaborate"
+                                text="Extended Team's Need"
+                                tooltip="Extended Team's Need"
+                                press="onExtendedNeedPress"
+                            />
+                            <!-- <Button
+                                type="Emphasized"
+                                icon="sap-icon://meeting-room"
+                                text="View Councils"
+                                tooltip="View your councils"
+                                press="onViewPress"
+                            /> -->
+                        </Toolbar>
+                    </f:headerToolbar>
+                    <f:customLayout>
+                        <grid:GridBoxLayout boxMinWidth="17rem" />
+                    </f:customLayout>
 
-				<f:GridListItem type="Active">
-					<f:Card >
-						<f:header>
-							<card:Header
-								title="{title}"
-								subtitle="{subtitle}"
-								iconSrc="sap-icon://work-history" />
-						</f:header>
-						<f:content>
-							<VBox class="sapUiSmallMargin">
-								<layoutData>
-									<FlexItemData growFactor="1" shrinkFactor="0" />
-								</layoutData>
-								<Label text="{jobDetail}"/>
-								<ObjectNumber
-									class="sapUiTinyMarginTop"
-									number="{number}"
-									state="Information" />
-								<ObjectStatus
-									class="sapUiTinyMarginTop"
-									text="{status}"
-									inverted="true"
-									icon="{= ${status} !== 'In progress' ? 'sap-icon://alert' : 'sap-icon://sys-enter-2' }"
-									state="{= ${status} !== 'In progress' ? 'Error' : 'Success' }" />
-							</VBox>
-						</f:content>
-					</f:Card>
-				</f:GridListItem>
-			</f:GridList>
-		</l:VerticalLayout>
-	</Page>
+                    <f:GridListItem type="Active">
+                        <f:Card>
+                            <f:header>
+                                <card:Header
+                                    title="{title}"
+                                    subtitle="{subtitle}"
+                                    iconSrc="sap-icon://work-history"
+                                />
+                            </f:header>
+                            <f:content>
+                                <VBox class="sapUiSmallMargin">
+                                    <layoutData>
+                                        <FlexItemData
+                                            growFactor="1"
+                                            shrinkFactor="0"
+                                        />
+                                    </layoutData>
+                                    <Label text="{jobDetail}" />
+                                    <ObjectNumber
+                                        class="sapUiTinyMarginTop"
+                                        number="{number}"
+                                        state="Information"
+                                    />
+                                    <ObjectStatus
+                                        class="sapUiTinyMarginTop"
+                                        text="{status}"
+                                        inverted="true"
+                                        icon="{= ${status} !== 'In progress' ? 'sap-icon://alert' : 'sap-icon://sys-enter-2' }"
+                                        state="{= ${status} !== 'In progress' ? 'Error' : 'Success' }"
+                                    />
+                                </VBox>
+                            </f:content>
+                        </f:Card>
+                    </f:GridListItem>
+                </f:GridList>
+				</Page>
+            </NavContainer>
+        </l:VerticalLayout>
+    </Page>
 </mvc:View>
